--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 main > button {
   height: 3rem;
-  width: 100%;
+  width: 20%;
   font-weight: bold;
 }
 body {
@@ -13,9 +13,12 @@ body {
 }
 button {
   height: 2rem;
+  width: 20%;
+  background-color: tomato;
 }
 
 li button:first-child {
+  width: 20%;
   background-color: tomato;
 }
 ul {
